# ratpad

./: Cargo.toml  README.md  pyproject.toml  watch.py
ratpad-client/: package.json
ratpad-client/src/: App.tsx  main.tsx
ratpad-client/src-tauri/: Cargo.toml  tauri.conf.json
ratpad-client/src-tauri/src/: main.rs
ratpad-client/src-tauri/src/util/: commands.rs  config.rs  mod.rs  padcomm.rs  serial.rs  state.rs
ratpad-client/src/api/: context.ts
ratpad-client/src/api/types/: app.ts  commands.ts  events.ts  mode.ts  serial.ts
src/ratpad/: boot.py  code.py  db.json  modes.json
src/ratpad/util/: display.py  keymap.py  manager.py  mode.py
