[project]
name = "ratpad"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Dax Harris", email = "mvh3875@rit.edu"},
]
dependencies = [
    "circup>=2.0.3",
    "setuptools>=71.1.0",
    "click>=8.1.7",
    "watchdog>=4.0.1",
    "rich>=13.7.1",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.scripts]
watch = "python watch.py"
deploy = "python watch.py --deploy"
